--- a/doc/sure.tex
+++ b/doc/sure.tex
@@ -12,10 +12,10 @@
 
 \chapter{Introduction}
 \input{intro}
-\chapter{Query Only}
+\chapter{Query Only}\label{ch:q}
 \input{qSim}
 \input{qDat}
-\chapter{Query and Subject}
+\chapter{Query and Subject}\label{ch:qs}
 \input{qsSim}
 \input{qsDat}
 
